Revisions for Pass 1 of Leah Tweaks
Revisions from pass one of leah's feedback.

--- a/21ststfarm.html
+++ b/21ststfarm.html
@@ -109,13 +109,7 @@
     </div> -->
 
 
-    <div class="body-text x-marg just-txt">Firefly Farm is a 5-acre regenerative farmstead located just inside east
-        Wichita. A
-        family farm site for over 100 years, Firefly Farm has been in the Garcia family since originally purchased by
-        Robert and Violet Garcia in 1950. A commercial farm since 2015, the land has seen many iterations and events --
-        a world-class motorcycle shop and a barn leveled by a tornado to name just a few!
-
-
+    <div class="body-text x-marg just-txt">
 
     </div>
 
@@ -126,19 +120,30 @@
                 Our farm at firefly
             </div>
             <p class="just-txt row-text body-text row-text-left">
-                Firefly is proud to share the Earth’s abundance with our Wichita community and beyond. We believe that
-                by following nature’s lead and nurturing the health and ecology of the soil, we thereby promote our own
-                health and happiness. Using organic and regenerative practices in all we do, we seek out the most
-                delicious and nutritious varieties to bring to our community and local food system.
-                <br><br>
-                As much as possible we love to support biodiverse and sustainable agriculture using dozens of heirloom
-                seed and rootstock varieties for our produce. Through our partnership with Tallgrass Hemp & Cannabis we
-                are excited to contribute to the research and resurgence of hemp, Kansas’ newest and oldest fiber, grain
-                and food crop.
-                <br><br>
-                Grateful to be a place beloved by many, Firefly Farm invites you to specialty pop-up markets and
-                farm-to-table dinners throughout the year. Follow along on social media or join the e-newsletter list
-                for up-to-date info on all that's growing at Firefly Farm.
+                Firefly Farm is a five-acre, vintage farmstead located just one mile east of Wichita city limits. A
+                family farm site for over 100 years, the land has been in the Garcia family since it was purchased by
+                Bob and Violet in 1950. It is a second-generation farm now with their son, Ron, and his wife, Leah, as
+                stewards.
+                <br></br>
+                The land has seen many iterations and eventful times over the years – it has been home to a small
+                working sheep and soybean farm, a world-class motorcycle shop, and now a specialty crop farm focusing on
+                resource conservation and regenerative practices. It has endured wildfires and a tornado and has proven
+                to be resilient!
+                <br></br>
+                Since its launch in 2015, Firefly Farm has hosted numerous critically acclaimed farm-to-table dinners, a
+                farmers’ book club, a highly popular farmers’ market, weddings, and an array of private parties and
+                events. Most importantly though, has been the growing program. Firefly Farm has focused on heirloom
+                vegetables, specifically, heirloom tomatoes on which it has built its reputation. We are proud to grow
+                and sell produce that is known for its flavor.
+                <br></br>
+                In 2020, Firefly Farm forged a connection with Tallgrass Hemp and Cannabis.
+                <!-- (Can you put in a link to Sarah’s web site here?)  -->
+                Through our partnership we are excited to contribute to the research and
+                resurgence of hemp, Kansas’ newest and oldest fiber, grain and food crop.
+                <br></br>
+                Grateful to be a place beloved by many, Firefly Farm invites you to buy our produce and attend our
+                events. Submit your contact information to receive our quarterly e-newsletter with up-to-date
+                information on all that's growing and going on at Firefly Farm!
 
             </p>
         </div>
