--- a/contactform/formpage.html
+++ b/contactform/formpage.html
@@ -49,10 +49,10 @@
         </div> -->
     <!-- beginning of bootstrap navbar from  https://getbootstrap.com/docs/4.0/examples/navbars/# -->
 
-    <div style="display:block" class="text-center">
+    <!-- <div style="display:block" class="text-center">
         <img class="site-logo mt-2 mt-lg-4 mt-xl-5 rounded mx-auto d-block" src="../img/fireflyfarmlogo_vector1.svg"
             alt="Firefly Farm logo" class="img-fluid">
-    </div>
+    </div> -->
 
     <nav class="navbar sticky-top navbar-expand-md navbar-light bg-light justify-content-md-center">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
