--- a/index.html
+++ b/index.html
@@ -140,13 +140,20 @@
         <p></p>
     </div>
 
-    <div class="top-blurb body-text just-txt">Firefly Farm launched a commercial growing operation in 2015 with tomatoes
-        and a
-        few
-        other summer crops. Selling to just three restaurant partners, the organically grown produce made fast
-        friends in the local Wichita food community. In the intervening years, we have added almost 20 additional
-        restaurant partners. While heirloom tomatoes are still at the heart of our business, we now grow a variety
-        of crops in four seasons.
+    <div class="top-blurb body-text just-txt"> Firefly Farm launched a wholesale, commercial growing operation in 2015
+        with an extensive offering of heirloom tomatoes and a few other summer crops. Selling to just three restaurants
+        that first year, the organically grown produce developed a dedicated following in the Wichita, local food
+        community.
+        <br></br>
+        In the intervening years, the farm has added extensively to our list of available produce and we now grow
+        year-round. Numerous additional local eateries have joined our satisfied customer list over the years and we are
+        proud to supply them. In 2021, we are launching an on-line store and branching out into retail sales as well.
+        <br></br>
+        Buy our delicious and healthful produce directly through our new, on-line store to create beautiful meals at
+        home when you feel like cooking. When you don’t, turn the kitchen work over to a talented, local chef and buy
+        our delicious and healthful produce already turned into a finished meal! Remember, when you spend money with one
+        of our customers, you are buying local two-levels deep!
+
     </div>
 
     <div class="row1">
