--- a/services.html
+++ b/services.html
@@ -114,13 +114,11 @@
             <div class="secthead inside-secthead inside-secthead-left" align="center">
                 hoop house design & build
             </div>
-            <p class="just-txt body-text row-text row-text-left">If you are looking to expand your growing season, or
-                get a jump on
-                summer
-                crops, season extension though high tunnels or hoop houses is a great place to start. We can design and
-                source a structure to fit your space and needs. Let us help you find grant sources and navigate the
-                grant application process. Our dedicated crew will build your tunnel on site and offer consultation for
-                crop planning to make the most of your new extended season!</p>
+            <p class="just-txt body-text row-text row-text-left">If you are looking to expand your growing season or get
+                a jump on summer crops, season extension though caterpillar tunnels or high tunnels is a great place to
+                start. We can design and source a structure to fit your space and needs. Let us help you find grant
+                sources and navigate the grant application process. Our dedicated crew will build your tunnel on site
+                and offer consultation for crop planning to make the most of your new extended season!</p>
         </div>
         <div class="c3"><img class="plantsale" src="../img/cattunnelsrc.jpg"></div>
         <div class="c4"></div>
@@ -133,12 +131,10 @@
                 consulting
             </div>
             <p class="just-txt body-text row-text row-text-right">Whether you're looking to diversify your produce
-                offering, begin a
-                new u-pick
-                blueberry patch or community garden, let us help you plan, price or implement your vision. For more
-                information on how we can help you begin or streamline your farm processes, fill out the <a
-                    href="contactform/formpage.html">contact form</a>
-                and tell us a little about what you’re looking for!</p>
+                offering, begin a new u-pick strawberry patch, or build a rooftop farm, let us help you plan, design,
+                price, or implement your vision. For more information on how we can help you begin or streamline your
+                farm processes, fill out the<a href="contactform/formpage.html">contact form</a> and tell us a little
+                about what you’re looking for!</p>
         </div>
     </div>
     <h1 id="grow">grow with Firefly Farm online</h1>
