--- a/shop.html
+++ b/shop.html
@@ -129,7 +129,28 @@
         </div>
       </div> -->
   <!-- start of collection -->
-  <a id="llStoreDropIn" href="https://www.localline.ca/firefly-farm-4" style="background-color:#FAFAFB;border:1px solid #424242;border-radius:10px;color:#424242;display:block;margin:auto;clear:both;cursor:pointer;padding:5px;text-decoration:none;width: 250px;box-sizing:border-box;font-family:Helvetica Neue,Helvetica,Arial,sans-serif;text-align:left;" onmouseover="this.style.backgroundColor = '#EEEEEE'" onmouseout="this.style.backgroundColor = '#FAFAFB'" target="_blank"><span style="border-radius:100%;background-color:#00B284;display:inline-block;float:left;height:40px;margin-right:20px;width:40px;"><img src="https://s3.amazonaws.com/localline-mailers-templates-public/staticpages/integrations/shopping-cart.svg" style="height:20px;margin:10px;width:20px;" alt="" /></span><span style="display:block;font-size:12px;font-weight:700;margin-top:4px;">WHOLESALE PORTAL HERE</span><span style="display:block;font-size:10px;margin-top:4px;">CLICK HERE FOR WHOLESALE</span></a>
+
+  <div class="c2 mt-5 centered top-blurb body-text just-txt" align="center">
+    <p class="just-txt m-md-5"> We care a lot about how food tastes, so we scour the market to find the most delicious
+      fruit and
+      vegetable varieties to grow. Whenever we can, we grow from organic, heirloom seeds and root stock. We
+      never use genetically modified organisms. We are dedicated to growing fruits and vegetables in ways that
+      don't damage the environment in which they are grown or the people who consume them. Our fertilizers are
+      always organic. We avoid using poisons or toxins to control insects, weeds, and disease; when absolutely
+      necessary, we only use OMRI-approved products. We believe that food grown locally, seasonally, and
+      sustainably doesn't just taste better and isn't just more health inducing but is more humane and
+      socially just, too. We hope you will appreciate the vision we have for our farm and that you will join
+      us in making it a reality by purchasing your produce here.</p>
+  </div>
+  <a id="llStoreDropIn" href="https://www.localline.ca/firefly-farm-4"
+    style="background-color:#FAFAFB;border:1px solid #424242;border-radius:10px;color:#424242;display:block;margin:auto;clear:both;cursor:pointer;padding:5px;text-decoration:none;width: 250px;box-sizing:border-box;font-family:Helvetica Neue,Helvetica,Arial,sans-serif;text-align:left;"
+    onmouseover="this.style.backgroundColor = '#EEEEEE'" onmouseout="this.style.backgroundColor = '#FAFAFB'"
+    target="_blank"><span
+      style="border-radius:100%;background-color:#00B284;display:inline-block;float:left;height:40px;margin-right:20px;width:40px;"><img
+        src="https://s3.amazonaws.com/localline-mailers-templates-public/staticpages/integrations/shopping-cart.svg"
+        style="height:20px;margin:10px;width:20px;" alt="" /></span><span
+      style="display:block;font-size:12px;font-weight:700;margin-top:4px;">WHOLESALE PORTAL HERE</span><span
+      style="display:block;font-size:10px;margin-top:4px;">CLICK HERE FOR WHOLESALE</span></a>
 
 
   <!-- <h1>Shop Coming Soon!</h1> -->
@@ -137,7 +158,8 @@
 
 
 
-  <script async type="text/javascript" data-tag="llscriptgenerator" src="https://www.localline.ca/embedding/embedgen.min.js?apikey=237be0fa2354c2bc4383a717450c6c89c3504d55&"></script>
+  <script async type="text/javascript" data-tag="llscriptgenerator"
+    src="https://www.localline.ca/embedding/embedgen.min.js?apikey=237be0fa2354c2bc4383a717450c6c89c3504d55&"></script>
   <!-- Collections display w/ rnd crnr -->
   <!-- <div id='collection-component-1618761155132'></div>
   <script type="text/javascript">
@@ -401,15 +423,15 @@
     }
 
     setTimeout(() => {
-    
-     myFunction22(); 
+
+      myFunction22();
     }, 2000)
 
     // document.getElementById("llEmbeddedStore").onload = function() {myFunction22()};
 
-function myFunction22() {
-  $('#llEmbeddedStore').insertAfter('#embedLoc');
-}
+    function myFunction22() {
+      $('#llEmbeddedStore').insertAfter('#embedLoc');
+    }
   </script>
 
 
