--- a/ucpage.html
+++ b/ucpage.html
@@ -26,7 +26,7 @@
 
 <body class="welcome" onclick="window.location.href='index.html';" style="cursor:pointer; width:100%; height:100%;">
     <div class="container">
-        <img class="welcome-logo" src="../img/fireflyfarmlogo_vector1.svg" alt="Firefly Farm logo">
+        <!-- <img class="welcome-logo" src="../img/fireflyfarmlogo_vector1.svg" alt="Firefly Farm logo"> -->
 
 
         <h1 class="welcome-banner"></h1>
