--- a/events.html
+++ b/events.html
@@ -158,11 +158,17 @@
                 spring plant sale
             </div>
             <p class="just-txt body-text row-text row-text-left">
-                Transplant some of the goodness of Firefly Farm into your garden during our spring plant sale. We’ve
-                picked and planted a variety of crops to help you jump start your summer harvest. During the plant sale,
-                come to the Firefly greenhouse and pick from tons of fresh and local tomato plants, herbs, veggies, and
-                flowers. These healthy organic starters will make it easy to entice visitors with a pollinator garden,
-                or to start hosting your own garden-to-table dinners.
+                Transplant some of the goodness of Firefly Farm into your backyard garden during our annual spring plant
+                sale typically held close to Earth Day each year. If you like the way our veggies taste, buy our plants
+                and grow them at home for yourself! We’ve done extensive research on the varieties we grow, so take
+                advantage of our hard work! During the plant sale, come to the Firefly propagation house and pick from
+                tons of fresh and organically grown tomato plants, other veggies, herbs, and flowers. These healthy
+                starters will make it easy to entice winged visitors to your pollinator garden or to grow veg for your
+                very own farm-to-table dinners.
+                <br></br>
+                Does our Spring Plant Sale interest you? Submit your contact information to receive our quarterly
+                newsletter with up-to-date information on all that’s growing and going on at Firefly Farm. And, don’t
+                forget to follow us on social media, too!
 
             </p>
         </div>
@@ -182,7 +188,13 @@
                 local farms and food makers. Then we invite local guest chefs to turn these farm-fresh, locally-sourced
                 ingredients into one-of-a-kind, five-course meals. We pair these courses with the best of locally-made
                 beer, wines, and spirits to round out a truly unique farm-to-fork experience. Watch our Facebook page to
-                learn about upcoming events.</p>
+                learn about upcoming events.
+                <br></br>
+                Do you want to join us for a Summer Farm-to-Table Dinner? Submit your contact information to receive our
+                quarterly
+                newsletter with up-to-date information on all that’s growing and going on at Firefly Farm. And, don’t
+                forget to follow us on social media, too!
+            </p>
         </div>
     </div>
 
@@ -193,20 +205,40 @@
                 fall leaf festival
             </div>
             <p class="just-txt body-text row-text row-text-left">Did you know that yard waste, like leaves and
-                trimmings, makes up almost 13%
-                of landfill waste? During our last fall leaf drive we put the call out to all our friends and neighbors
-                to help divert some of that organic waste, and help build our soil fertility through our compost
-                program. We were thrilled by the popularity of this idea and were quickly overwhelmed with donations!
+                trimmings, makes up almost 13% of all landfill waste? In 2020, we asked all our friends and neighbors to
+                donate their leaves to our compost/soil fertility program and thereby help divert it away from the local
+                landfills. We were thrilled by the popularity of this effort and were quickly overwhelmed with
+                donations!
                 <br><span class="apricots">-
-                    thank you, Wichita!</span><br><br>
+                    thank you, Wichita and Andover!</span><br><br>
                 <!-- use class  fall-leaves or fall-gradient for color -->
 
-                We gathered leaves from many neighborhoods, including: Overbrook, Crestview, Hawthorne, Lakepoint,
-                Vickridge, Eastborough, Woodlawn Village, and Riverside. We had one kind friend in College Hill organize
-                her whole block! We especially want to thank our friends at <a
-                    href="https://www.nudgecompost.com/">Nudge Compost</a> for putting the word out to their customers.
-                Another thank you goes out to <a href="https://www.treetop-nursery.com/">Tree Top Nursery</a> as they
-                dumped their leaves here for a couple of weeks, too.
+                Starting in 2021, we will be launching an annual fall leaf festival. Bring your bagged leaves to the
+                farm and donate them to our effort. We will have food trucks, music, and activities for the kids! Do
+                something good for the earth and something fun for the family!
+                <br></br>
+                Would your family like to join us for our Fall Leaf Festival? Submit your contact information to receive
+                our quarterly
+                newsletter with up-to-date information on all that’s growing and going on at Firefly Farm. And, don’t
+                forget to follow us on social media, too!
+            </p>
+        </div>
+    </div>
+
+    <div class="row2 tall_big" id="fttdinner">
+
+        <div class="c1"><img src="../img/dinnerbarnrc.jpg"></div>
+        <div class="c2 centered">
+            <div class="secthead inside-secthead inside-secthead-right" align="center">
+                summer pop-up markets
+            </div>
+            <p class="just-txt body-text row-text row-text-right">Perhaps our most popular events at Firefly Farm have
+                been our Farmers’ Markets. Although we do not hold them regularly anymore, we still intend to offer
+                pop-up markets from time to time when a crop blesses us with more production than we know what to do
+                with! Popular pop-ups in the past include a tomato pop-up and a pesto pop-up.<br></br>
+                Do our Summer Pop-Up Markets sound fun to you? Submit your contact information to receive our quarterly
+                newsletter with up-to-date information on all that’s growing and going on at Firefly Farm. And, don’t
+                forget to follow us on social media, too!
             </p>
         </div>
     </div>
