Final rev pass Revisions Copy Edit
Final pass revision copy edit

--- a/events.html
+++ b/events.html
@@ -60,7 +60,7 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.localline.ca/firefly-farm-4" target="_blank">Shop</a>
+                    <a class="nav-link" href="shop.html" target="_blank">Shop</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
@@ -79,6 +79,7 @@
                         <a class="dropdown-item" href="#plantsale">Spring Plant Sale</a>
                         <a class="dropdown-item" href="#fttdinner">Summer Farm-to-Table Dinners</a>
                         <a class="dropdown-item" href="#fallfest">Fall Leaf Festival</a>
+                        <a class="dropdown-item" href="#market">Summer Pop-up Markets</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -172,7 +173,7 @@
 
             </p>
         </div>
-        <div class="c3"><img class="plantsale sqr" src="../img/plant-salerc.jpg"></div>
+        <div class="c3"><img class="plantsale sqr" src="../img/plantsalething.jpg"></div>
     </div>
 
     <div class="row2 tall_big" id="fttdinner">
@@ -225,9 +226,9 @@
         </div>
     </div>
 
-    <div class="row2 tall_big" id="fttdinner">
+    <div class="row2 tall_big" id="market">
 
-        <div class="c1"><img src="../img/dinnerbarnrc.jpg"></div>
+        <div class="c1"><img src="../img/market.jpg"></div>
         <div class="c2 centered">
             <div class="secthead inside-secthead inside-secthead-right" align="center">
                 summer pop-up markets
