--- a/services.html
+++ b/services.html
@@ -59,7 +59,7 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.localline.ca/firefly-farm-4" target="_blank">Shop</a>
+                    <a class="nav-link" href="shop.html" target="_blank">Shop</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
@@ -78,6 +78,7 @@
                         <a class="dropdown-item" href="events.html#plantsale">Spring Plant Sale</a>
                         <a class="dropdown-item" href="events.html#fttdinner">Summer Farm-to-Table Dinners</a>
                         <a class="dropdown-item" href="events.html#fallfest">Fall Leaf Festival</a>
+                        <a class="dropdown-item" href="events.html#market">Summer Pop-up Markets</a>
                     </div>
                 </li>
                 <li class="nav-item">
