--- a/shop.html
+++ b/shop.html
@@ -81,6 +81,7 @@
             <a class="dropdown-item" href="events.html#plantsale">Spring Plant Sale</a>
             <a class="dropdown-item" href="events.html#fttdinner">Summer Farm-to-Table Dinners</a>
             <a class="dropdown-item" href="events.html#fallfest">Fall Leaf Festival</a>
+            <a class="dropdown-item" href="events.html#market">Summer Pop-up Markets</a>
           </div>
         </li>
         <li class="nav-item">
