--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <a class="nav-link" href="#!">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.localline.ca/firefly-farm-4" target="_blank">Shop</a>
+                    <a class="nav-link" href="shop.html" target="_blank">Shop</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
@@ -71,6 +71,7 @@
                         <a class="dropdown-item" href="events.html#plantsale">Spring Plant Sale</a>
                         <a class="dropdown-item" href="events.html#fttdinner">Summer Farm-to-Table Dinners</a>
                         <a class="dropdown-item" href="events.html#fallfest">Fall Leaf Festival</a>
+                        <a class="dropdown-item" href="events.html#market">Summer Pop-up Markets</a>
                     </div>
                 </li>
                 <li class="nav-item">
@@ -178,6 +179,32 @@
         </div>
         <div class="c3"><img class="headshot" src="../img/leah-headshot.jpg"></div>
 
+    </div>
+    <div class="vendor_pics_box">
+        <div class="vendor_pic_spot"><img src="../img/vendor/86 Cold Press.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/Beautiful Day.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/dempsys.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/Elderslie.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/felipes.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/Flying Stove.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/inspiritbrewing.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/LeafStoneApothecary.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/leslie.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/Little Lion Cafe.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/lolasbistro.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/newport.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/noraskitchen.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/orozcos.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/Piatto.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/placeholdercoffee.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/public.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/serenityfarm.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/Siena.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/signaturesaltsandseasonings.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/twoolives_logo.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/uncommontable.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/vora.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/wichitalocaleats.png"></div>
     </div>
     <!-- <div class="row2">
         <div class="c1"><img src="../img/peppers.jpg"></div>
