--- a/services.html
+++ b/services.html
@@ -59,7 +59,8 @@
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="shop.html" target="_blank">Shop</a>
+                    <a class="nav-link" href="https://www.localline.ca/firefly-farm-4" target="_blank"
+                        target="_blank">Shop</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
@@ -110,7 +111,7 @@
 
 
 
-    <div class="row1">
+    <div class="row1 tall_big">
         <div class="c2" align="center">
             <div class="secthead inside-secthead inside-secthead-left" align="center">
                 hoop house design & build
@@ -125,7 +126,7 @@
         <div class="c4"></div>
     </div>
 
-    <div class="row2">
+    <div class="row2 tall_big">
         <div class="c1"><img src="../img/consultingrc.jpg"></div>
         <div class="c2">
             <div class="secthead inside-secthead inside-secthead-right" align="center">
@@ -134,7 +135,7 @@
             <p class="just-txt body-text row-text row-text-right">Whether you're looking to diversify your produce
                 offering, begin a new u-pick strawberry patch, or build a rooftop farm, let us help you plan, design,
                 price, or implement your vision. For more information on how we can help you begin or streamline your
-                farm processes, fill out the<a href="contactform/formpage.html">contact form</a> and tell us a little
+                farm processes, fill out the<a href="contactform/formpage.html">contact form </a> and tell us a little
                 about what you’re looking for!</p>
         </div>
     </div>
