--- a/shop.html
+++ b/shop.html
@@ -131,7 +131,7 @@
       </div> -->
   <!-- start of collection -->
 
-  <div class="c2 mt-5 centered top-blurb body-text just-txt" align="center">
+  <!-- <div class="c2 mt-5 centered top-blurb body-text just-txt" align="center">
     <p class="just-txt m-md-5"> We care a lot about how food tastes, so we scour the market to find the most delicious
       fruit and
       vegetable varieties to grow. Whenever we can, we grow from organic, heirloom seeds and root stock. We
@@ -142,7 +142,7 @@
       sustainably doesn't just taste better and isn't just more health inducing but is more humane and
       socially just, too. We hope you will appreciate the vision we have for our farm and that you will join
       us in making it a reality by purchasing your produce here.</p>
-  </div>
+  </div> -->
   <a id="llStoreDropIn" href="https://www.localline.ca/firefly-farm-4"
     style="background-color:#FAFAFB;border:1px solid #424242;border-radius:10px;color:#424242;display:block;margin:auto;clear:both;cursor:pointer;padding:5px;text-decoration:none;width: 250px;box-sizing:border-box;font-family:Helvetica Neue,Helvetica,Arial,sans-serif;text-align:left;"
     onmouseover="this.style.backgroundColor = '#EEEEEE'" onmouseout="this.style.backgroundColor = '#FAFAFB'"
