--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                     <a class="nav-link" href="#!">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="shop.html" target="_blank">Shop</a>
+                    <a class="nav-link" href="https://www.localline.ca/firefly-farm-4" target="_blank"
+                        target="_blank">Shop</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
