Corrections Pass one from Leah week of  6/8
6/8 revisions pass one

rearranging menu (only full done on index) r

remove photo of the moeders

remove how we grow section

--- a/21ststfarm.html
+++ b/21ststfarm.html
@@ -83,8 +83,13 @@
                         <a class="dropdown-item" href="events.html#market">Summer Pop-up Markets</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="services.html">Services</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">Services</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown10">
+                        <a class="dropdown-item" href="services.html#hoop">Hoop Houses</a>
+                        <a class="dropdown-item" href="services.html#consult">Consulting</a>
+                    </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contactform/formpage.html">Contact</a>
@@ -137,8 +142,8 @@
                 events. Most importantly though, has been the growing program. Firefly Farm has focused on heirloom
                 vegetables, specifically, heirloom tomatoes on which it has built its reputation. We are proud to grow
                 and sell produce that is known for its flavor.
-                <br></br>
-                In 2020, Firefly Farm forged a connection with Tallgrass Hemp and Cannabis.
+                <br></br><a href="https://www.tallgrasshempcannabis.com/">
+                    In 2020, Firefly Farm forged a connection with Tallgrass Hemp and Cannabis.</a>
                 <!-- (Can you put in a link to Sarah’s web site here?)  -->
                 Through our partnership we are excited to contribute to the research and
                 resurgence of hemp, Kansas’ newest and oldest fiber, grain and food crop.
