--- a/crew.html
+++ b/crew.html
@@ -83,8 +83,13 @@
                         <a class="dropdown-item" href="events.html#market">Summer Pop-up Markets</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="services.html">Services</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">Services</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown10">
+                        <a class="dropdown-item" href="services.html#hoop">Hoop Houses</a>
+                        <a class="dropdown-item" href="services.html#consult">Consulting</a>
+                    </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contactform/formpage.html">Contact</a>
@@ -220,9 +225,10 @@
             </div>
             <div class="ronb centered"><img src="../img/crew/tarab.jpg" class="bio biopic"></div>
             <p class="just-txt rontxt">A Wichita original, Tara got her degree in English Literature at Wichita State
-                University and first joined the Firefly team for a season in the summer of 2017. In addition to growing,
-                Tara is a talented ceramics artist, an avid knitter, and baking enthusiast. Her favorite crops are
-                trellised cucumbers, Dinosaur kale, and Thai peppers.
+                University. She was Firefly Farm's first employee grower and worked here for a year-and-a-half before
+                leaving for a ceramics internship on the west coast. She rejoined the team in 2021 and is now the farm
+                manager. In addition to growing, Tara is a talented ceramics artist, avid knitter, and baking
+                enthusiast. Her favorite crops are trellised cucumbers, Dinosaur kale, and Thai peppers.
         </div>
     </div>
     <h1 id="grow">grow with Firefly Farm online</h1>
