--- a/events.html
+++ b/events.html
@@ -83,8 +83,13 @@
                         <a class="dropdown-item" href="#market">Summer Pop-up Markets</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="services.html">Services</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">Services</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown10">
+                        <a class="dropdown-item" href="services.html#hoop">Hoop Houses</a>
+                        <a class="dropdown-item" href="services.html#consult">Consulting</a>
+                    </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contactform/formpage.html">Contact</a>
@@ -237,7 +242,7 @@
             <p class="just-txt body-text row-text row-text-right">Perhaps our most popular events at Firefly Farm have
                 been our Farmers’ Markets. Although we do not hold them regularly anymore, we still intend to offer
                 pop-up markets from time to time when a crop blesses us with more production than we know what to do
-                with! Popular pop-ups in the past include a tomato pop-up and a pesto pop-up.<br></br>
+                with! Our tomato and pesto pop-ups have been extremely popular in previous years.<br></br>
                 Do our Summer Pop-Up Markets sound fun to you? Submit your contact information to receive our quarterly
                 newsletter with up-to-date information on all that’s growing and going on at Firefly Farm. And, don’t
                 forget to follow us on social media, too!
