--- a/index.html
+++ b/index.html
@@ -70,13 +70,18 @@
                         aria-expanded="false" onclick="window.location.href='events.html';">Events</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="events.html#plantsale">Spring Plant Sale</a>
+                        <a class="dropdown-item" href="events.html#market">Summer Pop-up Markets</a>
                         <a class="dropdown-item" href="events.html#fttdinner">Summer Farm-to-Table Dinners</a>
                         <a class="dropdown-item" href="events.html#fallfest">Fall Leaf Festival</a>
-                        <a class="dropdown-item" href="events.html#market">Summer Pop-up Markets</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="services.html">Services</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">Services</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown10">
+                        <a class="dropdown-item" href="services.html#hoop">Hoop Houses</a>
+                        <a class="dropdown-item" href="services.html#consult">Consulting</a>
+                    </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contactform/formpage.html">Contact</a>
@@ -116,22 +121,23 @@
             <div class="carousel-item" data-bs-interval="4000">
                 <img src="../img/carousel/carousel2.jpg" class="cimg d-block w-100" alt="...">
             </div>
-            <div class="carousel-item" data-bs-interval="4000">
-                <img src="../img/carousel/carousel3.jpg" class="cimg d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item" data-bs-interval="4000">
-                <img src="../img/carousel/carousel4.jpg" class="cimg d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item" data-bs-interval="4000">
-                <img src="../img/carousel/carousel5.jpg" class="cimg d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item" data-bs-interval="4000">
-                <img src="../img/carousel/carousel6.jpg" class="cimg d-block w-100" alt="...">
-            </div>
-            <!-- <div class="carousel-item" data-bs-interval="5000">
+            <!-- Photo of the Moeders that we are removing. -->
+            <!-- <div class="carousel-item" data-bs-interval="4000">
+                <img src="../img/carousel/carousel3.jpg" class="cimg d-block w-100" alt="..."> -->
+        </div>
+        <div class="carousel-item" data-bs-interval="4000">
+            <img src="../img/carousel/carousel4.jpg" class="cimg d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item" data-bs-interval="4000">
+            <img src="../img/carousel/carousel5.jpg" class="cimg d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item" data-bs-interval="4000">
+            <img src="../img/carousel/carousel6.jpg" class="cimg d-block w-100" alt="...">
+        </div>
+        <!-- <div class="carousel-item" data-bs-interval="5000">
             <img src="../img/carousel3.jpg" class="cimg d-block w-100" alt="...">
           </div> -->
-        </div>
+    </div>
     </div>
     <!-- End of Working Carousel -->
     <div class="motto d-flex flex-column mt-md-4 flex-lg-row justify-content-lg-around">
@@ -158,7 +164,9 @@
 
     </div>
 
-    <div class="row1">
+
+    <!-- A WORD ABOUT HOW WE GROW AND PHOTO OF LEAH -->
+    <!-- <div class="row1">
 
         <div class="c2 mt-5 centered" align="center">
             <div class="secthead inside-secthead m-2" align="center">
@@ -180,32 +188,32 @@
         </div>
         <div class="c3"><img class="headshot" src="../img/leah-headshot.jpg"></div>
 
-    </div>
+    </div> -->
     <div class="vendor_pics_box">
+        <div class="vendor_pic_spot"><img src="../img/vendor/public.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/newport.png"></div>
+        <div class="vendor_pic_spot"><img src="../img/vendor/Siena.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/86 Cold Press.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/Beautiful Day.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/dempsys.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/Elderslie.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/felipes.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/Flying Stove.png"></div>
+        <!-- <div class="vendor_pic_spot"><img src="../img/vendor/Flying Stove.png"></div> -->
         <div class="vendor_pic_spot"><img src="../img/vendor/inspiritbrewing.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/LeafStoneApothecary.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/leslie.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/Little Lion Cafe.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/lolasbistro.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/newport.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/noraskitchen.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/orozcos.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/Piatto.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/placeholdercoffee.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/public.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/serenityfarm.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/Siena.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/signaturesaltsandseasonings.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/twoolives_logo.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/uncommontable.png"></div>
         <div class="vendor_pic_spot"><img src="../img/vendor/vora.png"></div>
-        <div class="vendor_pic_spot"><img src="../img/vendor/wichitalocaleats.png"></div>
+        <!-- <div class="vendor_pic_spot"><img src="../img/vendor/wichitalocaleats.png"></div> -->
     </div>
     <!-- <div class="row2">
         <div class="c1"><img src="../img/peppers.jpg"></div>
