--- a/services.html
+++ b/services.html
@@ -82,8 +82,13 @@
                         <a class="dropdown-item" href="events.html#market">Summer Pop-up Markets</a>
                     </div>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#!">Services <span class="sr-only">(current)</span></a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link" href="!#" id="dropdown10" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">Services</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown10">
+                        <a class="dropdown-item" href="#hoop">Hoop Houses</a>
+                        <a class="dropdown-item" href="#consult">Consulting</a>
+                    </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contactform/formpage.html">Contact</a>
@@ -111,7 +116,7 @@
 
 
 
-    <div class="row1 tall_big">
+    <div class="row1 tall_big" id="hoop">
         <div class="c2" align="center">
             <div class="secthead inside-secthead inside-secthead-left" align="center">
                 hoop house design & build
@@ -126,7 +131,7 @@
         <div class="c4"></div>
     </div>
 
-    <div class="row2 tall_big">
+    <div class="row2 tall_big" id="consult">
         <div class="c1"><img src="../img/consultingrc.jpg"></div>
         <div class="c2">
             <div class="secthead inside-secthead inside-secthead-right" align="center">
@@ -135,7 +140,7 @@
             <p class="just-txt body-text row-text row-text-right">Whether you're looking to diversify your produce
                 offering, begin a new u-pick strawberry patch, or build a rooftop farm, let us help you plan, design,
                 price, or implement your vision. For more information on how we can help you begin or streamline your
-                farm processes, fill out the<a href="contactform/formpage.html">contact form </a> and tell us a little
+                farm processes, fill out the <a href="contactform/formpage.html">contact form </a> and tell us a little
                 about what you’re looking for!</p>
         </div>
     </div>
